--- a/src/main/java/me/steffenjacobs/effectivemusic/frontend/client/ui/component/playlist/style.css
+++ b/src/main/java/me/steffenjacobs/effectivemusic/frontend/client/ui/component/playlist/style.css
@@ -4,6 +4,7 @@
 
 .backgroundColor {
 	background-color: #464e64;
+	color: #c2c8d6;
 }
 
 .selectionColor {
@@ -14,8 +15,27 @@
 	background-color: #636f8d;
 }
 
+.secondColor {
+	background-color: #ed8236;
+	color: #c2c8d6;
+}
+
+.secondColor:hover {
+	background-color: #ef914b;
+	border: none;
+}
+
+.secondColor:active {
+	background-color: #f1a369;
+}
+
+.thirdColor {
+	background-color: #644b46;
+}
+
 .track {
 	cursor: pointer;
+	margin-left: 5px;
 }
 
 .track:hover {
@@ -23,7 +43,32 @@
 }
 
 .playlistBackground {
-	background-color: #464e64;
 	width: 100%;
 	height: 100%;
+	font-size: 1.5em;
+}
+
+.controlFirstCol {
+	width: 75px;
+}
+
+.controlSecondCol {
+	width: 75px;
+}
+
+.controlPanel {
+	margin: 20px;
+	border-radius: 10px;
+	margin-left: auto;
+	padding: 20px;
+	margin-right: auto;
+	width: 50%;
+}
+
+.trackTitleTextBox, .trackTitleTextBox:hover, .trackTitleTextBox:active
+	{
+	border: 2px inset #636f8d;
+	color: #464e64;
+	font-size: 1.5em;
+	width: 20em;
 }
