--- a/src/main/java/me/steffenjacobs/effectivemusic/frontend/client/ui/component/playlist/style.css
+++ b/src/main/java/me/steffenjacobs/effectivemusic/frontend/client/ui/component/playlist/style.css
@@ -99,13 +99,26 @@
 	border-radius: 0.5em;
 	border: 0.5em solid #313746;
 }
-.dialogPanel{
-      border: 2px inset #636f8d;
+
+.dialogPanel {
+	border: 2px inset #636f8d;
 }
 
 .contentPanel {
 	margin: 10px;
 	border-radius: 10px;
 	padding: 10px;
-	height:100%;
+	height: 100%;
+}
+
+.contextMenuButton {
+	cursor: pointer;
+}
+.contextMenuButton:hover {
+	cursor: pointer;
+	background-color: rgba(0, 0, 0, 0.1);
+}
+.contextMenuButton:active {
+	cursor: pointer;
+	background-color: rgba(0, 0, 0, 0.2);
 }
