--- a/src/main/java/me/steffenjacobs/effectivemusic/frontend/client/ui/component/playlist/style.css
+++ b/src/main/java/me/steffenjacobs/effectivemusic/frontend/client/ui/component/playlist/style.css
@@ -43,7 +43,6 @@
 }
 
 .playlistBackground {
-	width: 100%;
 	height: 100%;
 	font-size: 1.5em;
 }
@@ -114,11 +113,26 @@
 .contextMenuButton {
 	cursor: pointer;
 }
+
 .contextMenuButton:hover {
 	cursor: pointer;
 	background-color: rgba(0, 0, 0, 0.1);
 }
+
 .contextMenuButton:active {
 	cursor: pointer;
 	background-color: rgba(0, 0, 0, 0.2);
+}
+
+.fullsizeAbsolute {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	bottom: 50px;
+	right: 0px;
+}
+
+.fullsize {
+	width: 100%;
+	height: 100%;
 }
