--- a/src/main/java/me/steffenjacobs/effectivemusic/frontend/client/ui/component/playlist/style.css
+++ b/src/main/java/me/steffenjacobs/effectivemusic/frontend/client/ui/component/playlist/style.css
@@ -12,7 +12,7 @@
 	cursor: pointer;
 	min-width: 48px;
 	text-align: center;
-    border: 1px solid #2e1e11;
+	border: 1px solid #2e1e11;
 }
 
 .sendButton:hover {
@@ -218,4 +218,22 @@
 	padding-bottom: 5px;
 	margin-left: -10px;
 	margin-right: -10px;
+}
+
+.infoPopup {
+	line-height: 20px;
+	margin-left: 50px;
+	margin-right: 50px;
+	text-align: center;
+	font-size: 20px;
+	padding: 5px;
+	border: 5px solid white;
+	border-radius: 8px;
+	box-shadow: 1px 1px 20px #3e3e3e;
+	color: #464e64;
+	-webkit-transition: opacity 4s ease-in-out;
+	-moz-transition: opacity 4s ease-in-out;
+	-ms-transition: opacity 4s ease-in-out;
+	-o-transition: opacity 4s ease-in-out;
+	transition: opacity 4s ease-in-out;
 }
