--- a/src/main/java/me/steffenjacobs/effectivemusic/frontend/client/ui/component/playlist/style.css
+++ b/src/main/java/me/steffenjacobs/effectivemusic/frontend/client/ui/component/playlist/style.css
@@ -36,6 +36,7 @@
 	height: 20px;
 	width: 20px;
 	min-width: 20px;
+	padding: 0px;
 }
 
 .playingTrack {
@@ -236,4 +237,8 @@
 	-ms-transition: opacity 4s ease-in-out;
 	-o-transition: opacity 4s ease-in-out;
 	transition: opacity 4s ease-in-out;
+}
+
+.margin6pxBottomHover:hover {
+	margin-bottom: 6px;
 }
